--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Maven
-# Build your Java project and run tests with Apache Maven.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/java
-
 trigger:
 - main
 
@@ -20,11 +15,18 @@ steps:
 - checkout: self
 
 - script: |
-    mvn package
-  displayName: 'Build the application'
+    mvn verify
+  displayName: 'Build and test the application'
   workingDirectory: $(Build.SourcesDirectory)
+
+- task: PublishTestResults@2
+  condition: succeededOrFailed()
+  inputs:
+    testResultsFiles: '**/target/surefire-reports/TEST-*.xml'
+    testRunTitle: 'Publish Test Results'
+  displayName: 'Publish Test Results'
 
 - script: |
     copy $(Build.SourcesDirectory)\target\schoolhub-backend-0.0.1-SNAPSHOT.jar $(targetDirectory)
   displayName: 'Copy JAR file to target directory'
-
+  condition: succeeded()
